2009-02-09  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #432885

	* calendar/e-cal-backend-exchange.c: (open_calendar): Rescan foreign
	hierarchy same as personal one, to get list of shared calendars before
	giving up opening of the foreign calendar.

2009-02-03  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.25.90 release

2009-02-02  Suman Manjunath  <msuman@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (create_object),
	(modify_object_with_href): Don't convert the icalcomponent body to
	CR-LF format, libical does that already.

2009-02-02  Suman Manjunath  <msuman@novell.com>

	** Part of fix for bug #568554

	* calendar/e-cal-backend-exchange-tasks.c (get_changed_tasks): Fix a 
	compiler warning introduced after the libical fork was dropped.

2009-01-31  Matthew Barnes  <mbarnes@redhat.com>

	** Disable debug macros (#define d(x) x) throughout.  (#569638)

2009-01-19  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.25.5 release

2009-01-21  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #541209

	** Adapt to the new APIs from upstream libical. Changes made include
	using the "_r" counterpart for the following APIs:
	+ icalproperty_as_ical_string ()
	+ icalvalue_as_ical_string ()
	+ icalcomponent_as_ical_string ()
	+ icalparameter_as_ical_string ()
	+ icaldurationtype_as_ical_string ()
	+ icalenum_reqstat_code ()
	+ icallangbind_property_eval_string ()
	+ icallangbind_quote_as_ical ()
	+ icalmime_text_end_part ()
	+ icalperiodtype_as_ical_string ()
	+ icalproperty_enum_to_string ()
	+ icalproperty_get_parameter_as_string ()
	+ icalproperty_get_value_as_string ()
	+ icalproperty_get_property_name ()
	+ icalrecurrencetype_as_string ()
	+ icaltime_as_ical_string ()
	+ icalreqstattype_as_string ()
	+ icalvalue_binary_as_ical_string ()
	+ icalvalue_int_as_ical_string ()
	+ icalvalue_utcoffset_as_ical_string ()
	+ icalvalue_string_as_ical_string ()