@@ -1,3 +1,10 @@
+2009-02-13  Milan Crha  <mcrha@redhat.com>
+
+	** Partial fix for bug #545455
+
+	* mail-stub-exchange.c: (transfer_messages):
+	Check for the correct href of the message before accessing it.
+
 2009-02-09  Milan Crha  <mcrha@redhat.com>
 
 	** Fix for bug #432885
